--- a/Groups/Church of Dog/Black Dogs/Members/164xx.md
+++ b/Groups/Church of Dog/Black Dogs/Members/164xx.md
@@ -1,5 +1,9 @@
 # Backstory
 NOTES:
-- Very German
+- Very German 
 - Lost both of his legs to a grenade, replaced them with robotic equivalents.
   Embedded explosive launchers into the bottom of his legs, they are explosion resistant, and thus, he can rocket jump.
+- Burned the left side of his face in the explosion, fucking his left eye up. Commonly covers it with either shades or a gas mask.
+- Is blind on his left eye, he can't see depth.
+- Has been infused with the blood of the [[Sachred Dogs]] and became a [[Demi-Dogs]] to be saved from his injuries.
+- Goes by the name "164", real name is unknown.
