--- a/Groups/Church of Dog/Black Dogs/Members/164xx.md
+++ b/Groups/Church of Dog/Black Dogs/Members/164xx.md
@@ -1,4 +1,8 @@
 # Backstory
+ROLE:
+- EX-Leader, and in preclusion 2IC
+- Breacher Boy, due to his boom-legs
+
 NOTES:
 - Very German, but has a French accent
 - Lost both of his legs to a grenade, replaced them with robotic equivalents.
