Initial Science department data

--- a/Groups/Church of Dog/Branches/Black Dogs (MILITARY)/Members/164xx.md
+++ b/Groups/Church of Dog/Branches/Black Dogs (MILITARY)/Members/164xx.md
@@ -7,7 +7,7 @@ NOTES:
 - Very German, but has a French accent
 - Lost both of his legs to a grenade, replaced them with robotic equivalents.
   Embedded explosive launchers into the bottom of his legs, they are explosion resistant, and thus, he can rocket jump.
-  The legs were made by [[Z0De_]]
+  The legs were made by [[Mash]]
 - Burned the left side of his face in a fire, fucking his left eye up. Commonly covers it with either shades or a gas mask.
 - Is blind on his left eye, he can't see depth.
 - Has been infused with the blood of the [[Sachred Dogs]] and became a [[Demi-Dogs]] to be saved from his injuries.
