Some Kite ideas and actual ages

--- a/Groups/Church of Dog/Branches/Science Branch/anomalies/HV/HV-361.md
+++ b/Groups/Church of Dog/Branches/Science Branch/anomalies/HV/HV-361.md
@@ -1,5 +1,5 @@
 # Description
-[[HV-361]] is a wooden, almost puppet like lower arm and hand. Inlaid with seemingly four green emeralds of composition incomparable to emeralds within our possession. 
+[[HV-361]] is a wooden, almost puppet like right arm. Inlaid with seemingly four green emeralds of composition incomparable to emeralds within our possession. 
 
 The arm is permanently bound to a person upon contact, and there is currently no way to sever this connection, although the death of the wielder is speculated to do this. Severing the arm from the wielder seems to be ineffective to, as the arms can only be reattached to said wielder.
 
