Bitches shine bright, you're mother died

--- a/Groups/Church of Dog/Branches/Military Branch/Black Dogs (MILITARY)/Members/164xx.md
+++ b/Groups/Church of Dog/Branches/Military Branch/Black Dogs (MILITARY)/Members/164xx.md
@@ -26,11 +26,13 @@ Blast shells
 
 ## Trivia:
 - \[\[REDACTED\]
+- Thinks he stuck in a videogame
 
 # DND
+level: 7
 ## Skills:
-- Strength: 10
-- Dexterity: 9
+- Strength: 13
+- Dexterity: 13
 - Intelligence: 2
 - Wisdom: 7
 - Charisma: 2
